topics.tpl buttons and pagination fixes, integration on mobiles work in progress

--- a/less/style.less
+++ b/less/style.less
@@ -148,7 +148,6 @@ body {
 
 
 
-
 .btn-exodo-mini {
 
     border: 0;
@@ -401,8 +400,9 @@ a:hover, .btn-link:hover, .btn-link:active, .btn-link:focus {
 #dropdowntopic {
 	
 	.dropdown-menu {
-	min-width: 117px;
-	padding: 5px 5px;
+		padding: 5px 5px 5px 5px;
+		min-width: 115px;
+		white-space: nowrap;
 	}
 }
 
